<resources>
    <string name="app_name">ExchangeBook</string>
    <string name="title_activity_new_operation">New Operation</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="NextButton">Enter</string>
    <string name="WelcomeText">Good day!Please authorization!</string>
    <string name="title_activity_category_select">CategorySelectActivity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="NextButton2">New Operation</string>
    <string name="NextButton3">View Operation</string>
    <string name="WelcomeText1">Please take your pick</string>
    <string name="Hello">\"Good day user! \"</string>
    <string name="Back">Back</string>
    <string name="BackButton">Exit</string>
    <string name="new_exchange">New exchange</string>
    <string name="currency">currency</string>
    <string name="selection_menu">Selection menu</string>
    <string name="view_operation">View Operation</string>
    <string name="menu_authorization">Menu authorization</string>
    <string name="title_activity_list2">List2</string>
    <string name="View">View</string>
    <string name="Comment">Comment</string>
    <string name="DATE_TIME">Date Time</string>
    <string name="Date">Date</string>
    <string name="twocurrency">Currency</string>
    <string name="sum">Sum</string>
    <string name="twocourse">Rate</string>
    <string name="UAH">Uah</string>
    <string name="item_layout_date">Date</string>
    <string name="layout_item_button2">View</string>
    <string name="ukranian_hgrivna">UAH</string>
    <string name="Save">Save</string>
    <string name="COURSE">Rate</string>
    <string name="Comment1">Comment:</string>
    <string name="Operation">Operation</string>
    <string name="settings">settings</string>
    <string name="exit">Exit</string>
    <string name="SAVE">Save</string>
    <string name="filterDate">FilterDate</string>
    <string name="view_operation1">View Operation</string>

</resources>
