<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="spreadsheet.exchangebook.ListOperationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/item_layout_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Date" />

            <EditText
                android:id="@+id/item_layout_date3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:spinnersShown="false"
                android:text="12/04/2016" />

            <Spinner

                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="61dp"
                android:layout_marginStart="61dp"
                android:layout_toEndOf="@+id/textView4"
                android:layout_toRightOf="@+id/textView4"
                android:layout_weight="0.55"
                android:width="50dp"
                android:contextClickable="true"
                android:gravity="right|start" />


            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignBaseline="@+id/amountValue"
                android:layout_alignBottom="@+id/amountValue"
                android:layout_toEndOf="@+id/amountValue"
                android:layout_toRightOf="@+id/amountValue"
                android:width="50dp"
                android:contextClickable="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/item_layout_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DATE_TIME" />

            <TextView
                android:id="@+id/item_layout_2currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twocurrency" />

            <TextView
                android:id="@+id/item_layout_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/sum"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/item_layout_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twocourse"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/item_layout_UAH"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/UAH" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/OperationsList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="83dp"
        android:orientation="vertical">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Back" />

</RelativeLayout>
